--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 <version>1.2.4</version>
                 <configuration>
                     <targetClasses>
-                        <param>test.java.testVetorOrdenado</param>
+                        <param></param>
                     </targetClasses>
                     <targetTests>
                         <param>testVetorOrdenado.*</param>
@@ -44,11 +44,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                </configuration>
+                <!--<configuration>-->
+                    <!--<suiteXmlFiles>-->
+                        <!--<suiteXmlFile>testng.xml</suiteXmlFile>-->
+                    <!--</suiteXmlFiles>-->
+                <!--</configuration>-->
             </plugin>
         </plugins>
     </build>
